<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
        android:id="@+id/pageTittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pageTittle"
        android:textAlignment="center"
        android:textColor="@color/pageTittleColor"
        android:textSize="18sp"
        android:textStyle="bold"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@+id/backNav"
        app:layout_constraintEnd_toStartOf="@+id/backNav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backNav" />

    <ImageView
        android:id="@+id/backNav"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/back"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_navigation_description" />


    <ImageView
        android:id="@+id/twitterLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/twitter_logo_description"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pageTittle" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:padding="8dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twitterLogo">

        <com.romanydev.uipackage.CustomCardViewRounded
            android:id="@+id/cardTypedChar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1" />

        <com.romanydev.uipackage.CustomCardViewRounded
            android:id="@+id/cardRemainingChar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/postContentLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox.Dense"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/postContentText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="280"
            android:hint="@string/postContentHint"
            android:gravity="top"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/copyButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/green"
        android:text="@string/copyText"
        app:layout_constraintTop_toBottomOf="@+id/postContentLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearText"
        android:layout_width="120dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/red"
        android:text="@string/copyText"
        app:layout_constraintTop_toBottomOf="@+id/postContentLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/postTweet"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue"
        android:text="@string/postText"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copyButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>